--- a/index.html
+++ b/index.html
@@ -8,13 +8,36 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Simple JS App</title>
 </head>
 
 <body>
-  <h1>Pokédex</h1>
-  <p>Still gotta catch them all!</p>
+  <!-- Header Section with logo & nav -->
+  <header class="pokedex-header">
+    <div class="">
+      <a href="index.html" class="active"><img src="https://via.placeholder.com/200x75" alt="Placeholder-logo"></a>
+    </div>
+    <nav class="main-navigation page-header__item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
+        </li>
+        <li role="presentation">
+          <a href="" role="menuitem" class="navigation-list__item">Find Pokémon</a>
+        </li>
+        <li role="presentation">
+          <a href="" role="menuitem" class="navigation-list__item">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
+  <!-- Pokédex Section -->
+  <div class="">
+    <h1>Pokédex</h1>
+    <p>Still gotta catch them all!</p>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
