if applied, this commit will add a <ul> element with a class

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
   <div class="">
     <h1>Pokédex</h1>
     <p>Still gotta catch them all!</p>
+    <ul class="pokemon-list"></ul>
   </div>
-
+  
   <script src="js/scripts.js"></script>
 </body>
 
