if applied, this commit will remove a <div> tag that was not needed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <p>Still gotta catch them all!</p>
     <ul class="pokemon-list"></ul>
   </div>
-  
+
+  <script src="js/promise-polyfill.js"></script>
+  <script src="js/fetch.umd.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 
