--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     <ul class="pokemon-list"></ul>
   </div>
 
+  <!-- Modal container -->
+  <div id="modal-container">
+    <div class="image-container"></div>
+  </div>
+
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch.umd.js"></script>
   <script src="js/scripts.js"></script>
