--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;600;700&family=Ranchers&display=swap"
+    rel="stylesheet">
+  <!-- bootstrap.css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Custom css -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Simple JS App</title>
@@ -15,36 +19,68 @@
 <body>
   <!-- Header Section with logo & nav -->
   <header class="pokedex-header">
-    <div class="">
+    <!-- <div class="">
       <a href="index.html" class="active"><img src="https://via.placeholder.com/200x75" alt="Placeholder-logo"></a>
-    </div>
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-        </li>
-        <li role="presentation">
-          <a href="" role="menuitem" class="navigation-list__item">Find Pokémon</a>
-        </li>
-        <li role="presentation">
-          <a href="" role="menuitem" class="navigation-list__item">Contact</a>
-        </li>
-      </ul>
+    </div> -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #17a2b8;">
+      <a class="navbar-brand pokedex-custom-font" href="index.html">
+        <img src="images/pokeballs.png" width="30" height="30" class="d-inline-block align-top" alt="Pokéballs">
+        Pokédex App</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Find Pokémon</a>
+          </li>
+        </ul>
+      </div>
+      <div class="sr-only">Navigation bar</div>
     </nav>
   </header>
 
   <!-- Pokédex Section -->
-  <div class="">
-    <h1>Pokédex</h1>
-    <p>Still gotta catch them all!</p>
-    <ul class="pokemon-list"></ul>
+  <div class="container extra-top">
+    <div class="row justify-content-sm-center">
+      <div class="col col-lg-6 col-md-8">
+        <h1 class="pokedex-custom-font text-info">All the Pokémon...</h1>
+        <ul class="list-group pokemon-list" data-toggle="modal" data-target="#pokemonModal"></ul>
+      </div>
+      <div class="sr-only">List of pokemon</div>
+    </div>
   </div>
 
   <!-- Modal container -->
-  <div id="modal-container">
-    <div class="image-container"></div>
+  <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="sr-only">Pokemon details</div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="pokemonModalLabel"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+      </div>
+    </div>
   </div>
+  <!-- <div id="modal-container">
+    <div class="image-container"></div>
+  </div> -->
 
+  <!-- JavaScript links including jQuery, popper.js, bootstrap.js, polyfill, & fetch -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch.umd.js"></script>
   <script src="js/scripts.js"></script>
