--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="pokedex-header">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #17a2b8;">
       <a class="navbar-brand pokedex-custom-font" href="index.html">
-        <img src="images/pokeballs.png" width="30" height="30" class="d-inline-block align-top" alt="Pokéballs">
+        <img src="Images/pokeballs.png" width="30" height="30" class="d-inline-block align-top" alt="Pokéballs">
         Pokédex App</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Find Pokémon</a>
+            <a class="nav-link" href="https://pokeapi.co/" target="_blank">PokéAPI</a>
           </li>
         </ul>
       </div>
